fix: dialog scrollbar fixes

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -86,12 +86,22 @@
   }
 
   ::-webkit-scrollbar-track {
-    background: #f0f0f0;
+    background: #fff;
+    border-radius: 0.5rem;
+
   }
 
   ::-webkit-scrollbar-thumb {
     background-color: #c0c0c0;
-    border-radius: 4px;
+    border-radius: 0.5rem;
+  }
+
+  .dialog-scrollbar::-webkit-scrollbar-track {
+    border-radius: 0 0.5rem 0.5rem 0;
+  }
+
+  .dialog-scrollbar::-webkit-scrollbar-thumb {
+    border-radius: 0 0.5rem 0.5rem 0;
   }
 }
 
